@@ -1,3 +1,8 @@
+22
+
+ENHANCEMENTS:
+* Make bar wedge-shaped to make it easier to tell which direction is 0 vs 1
+
 21
 
 BUG FIX:
